fixed overflow

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -116,7 +116,7 @@ p {
         align-items: center;
         justify-content: center;
         width: 90%;
-        padding: 3rem;
+        padding: 2rem;
         box-sizing: border-box;
         background: rgb(255, 255, 255);
         z-index: 90;
@@ -137,7 +137,7 @@ p {
 
     &__navigation {
         position: absolute;
-        top: -50%;
+        top: -200px;
         left: 0;
         transition: 0.3s;
 
@@ -216,7 +216,6 @@ p {
 
 .main {
     padding-bottom: 8rem;
-    overflow-x: hidden;
 
     @include breakpoint(laptop) {
         display: flex;
